--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run: 
           name: Install Sauce
-          command: npm install saucelabs
+          command: npm install sauce
       - run: 
           name: sauce testing
           command: npm run-script sauce
